--- a/read_big_xlsx/package.json
+++ b/read_big_xlsx/package.json
@@ -15,6 +15,7 @@
     "node-xlsx": "^0.21.0",
     "path": "^0.12.7",
     "readline": "^1.3.0",
+    "sqlite3": "^5.0.2",
     "xlsx-extract": "^0.1.3"
   }
 }
